After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 755365 - Code cleanups
Code cleanups
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
git master
Other Linux
: Normal minor
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-09-21 17:42 UTC by Michael Catanzaro
Modified: 2015-10-07 13:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Avoid using g_return_val_if_fail in ephy_uri_safe_unescape (1012 bytes, patch)
2015-09-21 17:55 UTC, Michael Catanzaro
none Details | Review
Remove redundant call to g_task_set_check_cancellable (898 bytes, patch)
2015-09-21 17:55 UTC, Michael Catanzaro
none Details | Review
Avoid using g_return_val_if_fail in ephy_uri_safe_unescape (961 bytes, patch)
2015-09-21 17:56 UTC, Michael Catanzaro
committed Details | Review
Remove redundant call to g_task_set_check_cancellable (847 bytes, patch)
2015-09-21 17:56 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2015-09-21 17:42:35 UTC
Miscellaneous code cleanups that can't go in now due to freeze...
Comment 1 Michael Catanzaro 2015-09-21 17:55:34 UTC
Created attachment 311792 [details] [review]
Avoid using g_return_val_if_fail in ephy_uri_safe_unescape

https://bugzilla.gnome.org/show_bug.cgi?id=755287
Comment 2 Michael Catanzaro 2015-09-21 17:55:38 UTC
Created attachment 311793 [details] [review]
Remove redundant call to g_task_set_check_cancellable

It's the default

https://bugzilla.gnome.org/show_bug.cgi?id=755287
Comment 3 Michael Catanzaro 2015-09-21 17:56:17 UTC
Created attachment 311794 [details] [review]
Avoid using g_return_val_if_fail in ephy_uri_safe_unescape
Comment 4 Michael Catanzaro 2015-09-21 17:56:21 UTC
Created attachment 311795 [details] [review]
Remove redundant call to g_task_set_check_cancellable

It's the default
Comment 5 Claudio Saavedra 2015-09-22 12:10:44 UTC
Review of attachment 311795 [details] [review]:

OK
Comment 6 Claudio Saavedra 2015-09-22 12:11:20 UTC
Review of attachment 311794 [details] [review]:

OK. Should it go to stable as well?
Comment 7 Michael Catanzaro 2015-09-22 13:12:38 UTC
(In reply to Claudio Saavedra from comment #6)
> Review of attachment 311794 [details] [review] [review]:
> 
> OK. Should it go to stable as well?

I don't think so. The only benefit would be to turn criticals into crashes... I don't think they would occur, but just in case, let's give ourselves some time to find out.
Comment 8 Michael Catanzaro 2015-10-07 13:31:35 UTC
Attachment 311794 [details] pushed as 9a14372 - Avoid using g_return_val_if_fail in ephy_uri_safe_unescape
Attachment 311795 [details] pushed as bd826d1 - Remove redundant call to g_task_set_check_cancellable