Avoid using g_return_val_if_fail in ephy_uri_safe_unescape

https://bugzilla.gnome.org/show_bug.cgi?id=755365